--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   </head>
   <body>
     <canvas id="snake"></canvas>
+    <div class="popup popup-hidden">
+      <div id="content">
+        <div id="cancel">
+          <span>X</span>
+        </div>
+        <p id="context">
+          Your Score:
+        </p>
+
+        <button id="button">
+          Try Again
+        </button>
+      </div>
+    </div>
 
     <script src="snake.js"></script>
   </body>
